# geoplotnik

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/data/tas_diagram/: default.csv
deployment/: README.md  wsgi_template.py
src/geoplotnik/: main.py  pages.py  test.py
src/geoplotnik/components/: ids.py  ids.pyi  layout.py
src/geoplotnik/components/header/: layout.py
src/geoplotnik/components/home/: layout.py
src/geoplotnik/components/master/: layout.py
src/geoplotnik/components/navbar/: layout.py
src/geoplotnik/components/tas_diagram/: __init__.py  axes_dropdown.py  callbacks.py  grouping_parameter.py  layout.py  location_dropdown.py  previewer.py  rocks.py  uploader.py
src/geoplotnik/data/: loaders.py  source.py
tests/: test_data_loader.py
