[project]
name = "geoplotnik"
version = "0.1.0"
description = "Plots your favourite geological diagrams with passion."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.3",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
  "coverage>=7.9.2",
  "isort>=6.0.1",
  "mccabe>=0.7.0",
  "mypy>=1.17.0",
  "pandas-stubs>=2.3.0.250703",
  "pylsp-mypy>=0.7.0",
  "pytest>=8.4.1",
  "python-lsp-server>=1.13.0",
  "reorder-python-imports>=3.15.0",
  "ruff>=0.12.4",
  "types-requests>=2.32.4.20250611",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true

[tool.ruff]
exclude = [
  "build",
  "dist",
  ".venv",
  "venv",
  "site-packages",
  ".git",
  ".mypy_cache",
  ".tox",
  ".ruff_cache",
]
extend-exclude = ["noxfile.py"]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203",   # No blank lines after class definition.
  "D213",   # Docstring summary on first line.
  "E402",
  "E722",
  "F403",
  "F405",
  "I001",   # Using `reorder-python-imports`.
  "INP001", # It is OK not to have `__init__.py` when not needed.
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = true
force-sort-within-sections = true
lines-after-imports = 2


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "ANN201", # Tests usually return `None`.
  "D103",   # Test names are descriptive enough for the most part.
  "S101",   # Asserts are okay in tests.
  "S311",   # `random` is used for simulation, not cryptography.
  "S603",   # Testbench is not a subject to attack.
  "S605",   # As above.
  "S607",   # As above.
]


[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
